@@ -8,6 +8,7 @@
     ----------------------------
     + XSS (reflected) in 'bw-calulator-result.php';
     + XSS (reflected) by invalid email address response;
+    + XSS and LDAP injection in ad-search-result.php;
     + Restrict find_full_subnets.php to CLI;
 
 == 1.5.0
